2010-06-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #30104: power.h - Missing "power_usart1_/enable/disable()"
	functions for ATmega644
	* include/avr/power.h: Fix macros for ATmega644A/P/PA

2010-06-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Jan Waclawek:
	Document issues around compiler optimizations and code reordering
	* doc/api/optimize.dox: New file.
	* doc/api/doxygen.config.in: Add optimize.dox.
	* include/avr/cpufunc.h (_MemoryBarrier): xref to optim_code_reorder
	* include/avr/interrupt.h: (Ditto.)
	* include/util/atomic.h: (Ditto.)

2010-06-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/rel-method.dox: Adapt to our new release numbering scheme.

2010-06-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tests/simulate/avr/eeprom-1.c: Remove the old AT90S2313 simulator
	bug workaround, as the workaround doesn't work anymore now while the
	original code does.

2010-06-09  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #26767.
	* include/avr/iox256a3b.h: Added corrected names for GPIO registers.
	* include/avr/iox128a1.h: Same.
	* include/avr/iox128a3.h: Same.
	* include/avr/iox16a4.h: Same.
	* include/avr/iox16d4.h: Same.
	* include/avr/iox192a3.h: Same.
	* include/avr/iox256a3.h: Same.
	* include/avr/iox32a4.h: Same.
	* include/avr/iox64a1.h: Same.
	* include/avr/iox64a3.h: Same.

2010-06-09  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #28582.
	* include/avr/iox256a3b.h: Add 3 missing double-word registers.
	* NEWS: Add to fixed bugs list.

2010-06-09  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #29502.
	* include/avr/iox128a1.h (TC_EVACT_FRW_gc): Fix name to TC_EVACT_FRQ_gc.
	* NEWS: Add to fixed bugs list.

2010-06-09  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #29653.
	* include/avr/iousbxx2.h (PUD): Add bit definition.
	* NEWS: Add to fixed bugs list.

2010-06-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Move some testscripts around.